--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script></head>
 <body>
     
-<div class="app">
+<div id="app">
     <section class="slider">
-        <div class="prev">
+        <div class="prev" @click="prevPhoto">
             <i class="fas fa-arrow-left"></i>
         </div>
         <div class="images">
-            <img src="./img/China-economy.jpg" alt="">
+            <img :src="photos[indexPhotos]" alt="">
         </div>
-        <div class="next">
+        <div class="next" @click="nextPhoto">
             <i class="fas fa-arrow-right"></i>
         </div>
         <div class="dot-nav">
