--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
             <i class="fas fa-arrow-right"></i>
         </div>
         <div class="dot-nav">
-            <i class="fas fa-circle active"></i>
-            <i class="fas fa-circle"></i>
-            <i class="fas fa-circle"></i>
-            <i class="fas fa-circle"></i>
+            <i v-for="(photo, index) in photos"
+            class="fas fa-circle"
+            :class="{ active: index == indexPhotos }"
+            @click="setPhoto(index)"
+            ></i>
         </div>
     </section>
 </div>
