--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="app">
     <section class="slider"
     @mouseenter="stopLoop"
-    @mouseout="startLoop"
+    @mouseleave="startLoop"
 
     @keyup.left="prevPhoto"
     @keyup.right="nextPhoto"
